trying to fix dashboard right menu on mobile

--- a/src/app/common/components/layout/default/site-layout/site-layout.component.scss
+++ b/src/app/common/components/layout/default/site-layout/site-layout.component.scss
@@ -3258,8 +3258,8 @@ button.xko {
       top: 45px;
       right: 10px;
       width: 240px;
-      height: calc(var(--vh, 1vh) * 100 - 25%) !important;
-      min-height: calc(var(--vh, 1vh) * 100 - 25%) !important;
+      height: calc(var(--vh, 1vh) * 100 - 25px) !important;
+      min-height: calc(var(--vh, 1vh) * 100 - 25px) !important;
       padding: 10px;
       .menu-switchers {
         height: 30px;
@@ -3355,8 +3355,8 @@ button.xko {
       top: 40px;
 
       width: 180px;
-      height: calc(var(--vh, 1vh) * 100 - 28%) !important;
-      min-height: calc(var(--vh, 1vh) * 100 - 28%) !important;
+      height: calc(var(--vh, 1vh) * 100 - 100px) !important;
+      min-height: calc(var(--vh, 1vh) * 100 - 100px) !important;
       padding: 7px;
       .menu-switchers {
         height: 23px;
@@ -3385,6 +3385,12 @@ button.xko {
   }
 }
 @media screen and (max-width: 700px) and (orientation: landscape) {
+  .right-container {
+    .right-part-holder {
+      height: calc(var(--vh, 1vh) * 100 - 95px) !important;
+      min-height: calc(var(--vh, 1vh) * 100 - 95px) !important;
+    }
+  }
   .my-nav {
     .nav-logo {
     }
